--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;400;700&display=swap');
+  </style>
   <title>React App</title>
 </head>
 <body>
