--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon1.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;400;700&display=swap');
   </style>
-  <title>React App</title>
+  <title>Longs</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
